Added candidates and election GET endpoints
